<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redirect2"
    tools:context="com.wather.andrzej.sqllite.SingOut">

    <EditText
        android:id="@+id/numberPhone"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginEnd="116dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="84dp"
        android:text="@string/addNumber"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pass"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/nameUser"
        app:layout_constraintStart_toStartOf="@+id/nameUser"
        app:layout_constraintTop_toBottomOf="@+id/nameUser" />

    <EditText
        android:id="@+id/passwd"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/singInBtn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="singOutBtnClick"
        android:text="@string/singup"
        app:layout_constraintEnd_toEndOf="@+id/passwd"
        app:layout_constraintStart_toStartOf="@+id/passwd"
        app:layout_constraintTop_toBottomOf="@+id/passwd" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/entName"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/numberPhone" />

    <EditText
        android:id="@+id/nameUser"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginEnd="116dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/numberPhone"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="@+id/numberPhone"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</android.support.constraint.ConstraintLayout>
